--- a/index.html
+++ b/index.html
@@ -4,8 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>PRUEB1A</h1>
+    <header>
+        <div id="myName">
+            <img id="selfimg" src="img/imagenalex.webp">
+            <p>Àlex Alcalà</p>
+        </div>
+        <nav>
+            <ul>
+                <li>Inicio</li>
+                <li>Conocimientos</li>
+                <li>Proyectos</li>
+                <li>Experiencia</li>
+                <li>Estudios</li>
+                <li>Contacto</li>
+            </ul>
+        </nav>
+        <div id="smallResImage" class="hidden" onclick="toggleMenu()">
+            <img src="img/open_menu.png" alt="Imagen móvil">
+        </div>
+        <div id="socialIcons">
+            <a><img class="social" src="img/github_icon.png"></a>
+            <a><img class="social" src="img/linkedin_icon.png"></a>
+            <a><img class="social" src="img/instagram_icon.png"></a>
+        </div>
+    </header>
+    <div id="submenu" class="hidden">
+        <ul>
+            <li class="hiddenList">Inicio</li>
+            <li class="hiddenList">Conocimientos</li>
+            <li class="hiddenList">Proyectos</li>
+            <li class="hiddenList">Experiencia</li>
+            <li class="hiddenList">Estudios</li>
+            <li class="hiddenList">Contacto</li>
+        </ul>
+        <div id="hiddenSocialIcons">
+            <a><img class="social" src="img/github_icon.png"></a>
+            <a><img class="social" src="img/linkedin_icon.png"></a>
+            <a><img class="social" src="img/instagram_icon.png"></a>
+        </div>
+    </div>
 </body>
 </html>
