first title, glow mouse and improved header

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Àlex Alcalá</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="icon" href="img/imagenalex.webp" type="image/x-icon">
 </head>
 <body>
     <header>
+        <div class="glow-follow"></div>
         <div id="myName">
             <img id="selfimg" src="img/imagenalex.webp">
-            <p>Àlex Alcalà</p>
+            <p>Àlex Alcalá</p>
         </div>
         <nav>
             <ul>
@@ -34,12 +35,12 @@
     </header>
     <div id="submenu" class="hidden">
         <ul>
-            <li class="hiddenList">Inicio</li>
-            <li class="hiddenList">Conocimientos</li>
-            <li class="hiddenList">Proyectos</li>
-            <li class="hiddenList">Experiencia</li>
-            <li class="hiddenList">Estudios</li>
-            <li class="hiddenList">Contacto</li>
+            <li class="hiddenList glow-effect">Inicio</li>
+            <li class="hiddenList glow-effect">Conocimientos</li>
+            <li class="hiddenList glow-effect">Proyectos</li>
+            <li class="hiddenList glow-effect">Experiencia</li>
+            <li class="hiddenList glow-effect">Estudios</li>
+            <li class="hiddenList glow-effect">Contacto</li>
         </ul>
         <div id="hiddenSocialIcons">
             <a><img class="social" src="img/github_icon.png"></a>
@@ -47,5 +48,20 @@
             <a><img class="social" src="img/instagram_icon.png"></a>
         </div>
     </div>
+    <div id="firstTitle">
+        <h3>HOLA, MI NOMBRE ES ÀLEX</h3>
+        <h1>SOY DESARROLLADOR WEB.</h1>
+        <h2 id="shortDesc">Soy un desarrollador web motivado con experiencia en diversas tecnologías, adaptable y con facilidad para el trabajo en equipo. Aspiro a crecer en un entorno dinámico donde pueda aplicar y expandir mis conocimientos.</h2>
+    </div>
+    <h2 id="conocimientosTitle">Conocimientos</h2>
+    <div id="conocimientos">
+        <div>
+            <img>
+        </div>
+        <div>
+
+        </div>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
